[package]
name = "blog"
version = "0.1.0"
authors = ["Iain Maitland <github@iainmaitland.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.22.2"
rouille = "3.0.0"
pulldown-cmark = "0.8.0"
ammonia = "3.1.0"
walkdir = "2.3.1"
toml = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
exitcode = "1.1.2"
